app/scss/theme/fancify.scss
$view-animate-hide-speed: .7s;
$view-animate-show-speed: 1s;
$sidebar-toggle-speed: .3s;
$animate-std-cubic: cubic-bezier(.250, .460, .450, .940);

div.layout {

    > header {

        .title {

            padding-right: $header-height/6;

            &:after {
                background-color: $header-title-bg-color;
                height: 100%;
                width: $header-height/4;
                position: absolute;
                right: -$header-height/10;
                top: 0;
                content: ' ';
                @include transform(skew(-20deg, 0deg));
            }
        }

        .search {
            margin-left: $header-height/2.5;

            i {
                left: -.7em;
            }

            &:before {
                background-color: $header-bg-color;
                border-right: $header-title-bg-color 3px solid;
                height: 100%;
                width: $header-height/2.5;
                position: absolute;
                left: -1em;
                top: 0;
                content: ' ';
                @include transform(skew(-20deg, 0deg));
            }
        }

        .title,
        .search {
            @include transition(opacity linear 1s);
            opacity: 1;

            &.ng-hide {
                opacity: 0;
            }
        }
    }

    > nav {
        @include transition(left cubic-bezier(0, 0, .2, 1) .5s);
        left: 0;

        &.ng-hide {
            left: -$menu-size;
        }

        .sections li {
            @include transition(background linear .1s);
        }
    }
}

.view-animate {

    &.ng-leave {
        @include transition(all $animate-std-cubic $view-animate-hide-speed);

        &.ng-leave-active {
            opacity: 0;
        }
    }

    &.ng-enter {
        @include transition(all $animate-std-cubic $view-animate-show-speed $view-animate-hide-speed);
        opacity: 0;

        &.ng-enter-active {
            opacity: 1;
        }
    }
}

.list-animate {

    &.ng-enter {
        @include transition(opacity $animate-std-cubic .5s);
    }

    &.ng-move {
        @include transition(opacity $animate-std-cubic .3s);
    }

    &.ng-move-active,
    &.ng-enter.ng-enter-active,
    &.ng-move.ng-move-active {
        opacity: 1;
    }

    &.ng-move {
        opacity: .5;
    }

    &.ng-enter {
        opacity: 0;
    }

    &.ng-enter-stagger {
        -webkit-transition-delay: .12s;
        transition-delay: .12s;
    }

}

.appear-delayed {

    @include transition(opacity $animate-std-cubic $view-animate-show-speed $view-animate-hide-speed);
    opacity: 1;

    &.ng-hide {
        opacity: 0;
    }
}

footer.feedback {

    @include transition(all cubic-bezier(.295, .305, .065, 1.455) .3s);
    opacity: 1;
    height: $layout-feedback-height*1.1;
    bottom: -$layout-feedback-height*.1;

    &.ng-hide {
        opacity: 0;
    }

    &.ng-hide-remove {
        animation-name: feedback;
        animation-duration: 1s;
    }
}

.badge {

    @include transition(all cubic-bezier(.295, .305, .065, 1.455) .3s);
    opacity: 1;

    &.ng-hide {
        opacity: 0;
        font-size: 0;
    }

    &.ng-animate {
        animation-name: badge;
        animation-duration: 1s;
    }
}

.select {

    button span {
        @include transition(all $animate-std-cubic .3s);
    }

    .select-dropdown {
        opacity: 1;

        &.ng-hide {
            opacity: 0;
        }

        &.ng-hide-add {
            @include transition(all linear .1s .1s);
        }
    }
}

input.ng-invalid {
    @include transition(all linear .1s);
}

.progress-bar .meter {
    @include transition(all linear .2s);
}

.top-filter {
    @include transition(background $animate-std-cubic .1s, opacity $animate-std-cubic $view-animate-show-speed $view-animate-hide-speed);

    .actions {
        @include transition(opacity linear .2s, width linear 0s .2s);
    }
}

.main-content-list {

    li.cl > div,
    li.cl > div > div.comments {
        @include transition(background $animate-std-cubic .1s);
    }

    > li.cl > ul li.cl {

        > ul {
            height: auto;
            max-height: 0;
            @include transition(opacity $animate-std-cubic .4s, max-height cubic-bezier(0, .6, .85, 1) .3s);
        }
    }

    &.expand > li.cl > ul li.cl > ul,
    > li.cl > ul.expand li.cl > ul,
    > li.cl > ul li.cl.expand > ul {
        max-height: 1000px;
    }
}

.main {
    @include transition(margin-right ease-in $sidebar-toggle-speed);
}

.sidebar {
    //@include transition(width ease-in $sidebar-toggle-speed);
}

